client/blocks/reader-post-actions/style.scss
.reader-post-actions {
	box-sizing: border-box;
	display: flex;
	font-family: $sans;
	flex-direction: row;
	height: auto;
	justify-content: flex-end;
	list-style-type: none;
	margin: 10px 0 0;
}

.reader-post-actions .reader-post-actions__item {
	margin-right: 13px;

	&.reader-post-actions__visit {
		flex: 1;

		.reader-post-actions__visit-label {
			color: lighten( $gray, 10% );
		}

		.external-link {
			align-items: center;
			box-sizing: border-box;
			display: inline-flex;
			padding: 4px 4px 4px 0;
			position: relative;
		}

		.external-link:hover,
		.external-link:focus,
		.external-link:active {

			.gridicon {
				fill: $blue-light;
			}

			.reader-post-actions__visit-label {
				color: $blue-light;
			}
		}
	}

	&:last-child {
		margin-right: 0;
	}
}

.reader-post-actions .reader-post-options-menu .button {

	&.is-borderless .gridicon {
		top: -2px;
	}
}

